# SeverActions

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/: CAPABILITIES.md
.claude/commands/: commit.md  deploy.md  validate.md
00 Core/: SeverActions.esp  SeverActions_CustomAI_DISTR.ini
00 Core/Interface/Translations/: SeverActions_english.txt
00 Core/PrismaUI/views/SeverActions/: diary.html  index.html
00 Core/PrismaUI/views/SeverActions/assets/: client-Der9nqag.js  diary-CpVbX38G.js  index-BAk7_Gp1.css  index-BVDpUYup.js  index-BlpXczd6.js  index-CBYuQy1O.js  index-CD3FdcM2.css  index-CUN_RSEJ.js  index-CyEQczix.js  index-DIhKJ_3-.css  index-Db1mrads.css  index-DzjYT4t_.js  (+30 more)
00 Core/PrismaUI/views/SeverActionsArrestPrompt/: index.html
00 Core/PrismaUI/views/SeverActionsBrawlPrompt/: index.html
00 Core/PrismaUI/views/SeverActionsDiary/: index.html
00 Core/PrismaUI/views/SeverActionsPrompt/: index.html
00 Core/SKSE/Plugins/: SeverActionsNative.toml
00 Core/Scripts/: SeverActionsNative.pex  SeverActionsNativeExt.pex  SeverActions_Arousal.pex  SeverActions_Arrest.pex  SeverActions_ArrestBounty.pex  SeverActions_ArrestJudgment.pex  SeverActions_ArrestPlayer.pex  SeverActions_Brawl.pex  SeverActions_Combat.pex  SeverActions_Crafting.pex  SeverActions_Currency.pex  SeverActions_Debt.pex  SeverActions_EatingAnimations.pex  SeverActions_FertilityMode_Bridge.pex  SeverActions_Follow.pex  SeverActions_FollowerManager.pex  SeverActions_Furniture.pex  SeverActions_Hotkeys.pex  SeverActions_Init.pex  SeverActions_Loot.pex  SeverActions_MCM.pex  SeverActions_Outfit.pex  SeverActions_OutfitAlias.pex  SeverActions_OutfitSlot.pex  SeverActions_PrismaUI.pex  SeverActions_Property.pex  SeverActions_SLOArousal.pex  SeverActions_SpellCast.pex  SeverActions_SpellCastAlias.pex  SeverActions_SpellTeach.pex  SeverActions_Survival.pex  SeverActions_Travel.pex  SeverActions_WheelMenu.pex  SeverActions_YieldAlias.pex
00 Core/Source/BuildStubs/: DBF_ScriptUtil.psc  DLC1_NPCMentalModelScript.psc  DialogueFollowerScript.psc  EFFCore.psc  nwsFollowerControllerScript.psc
00 Core/Source/Scripts/: SeverActionsNative.psc  SeverActionsNativeExt.psc  SeverActions_Arousal.psc  SeverActions_Arrest.psc  SeverActions_ArrestBounty.psc  SeverActions_ArrestJudgment.psc  SeverActions_ArrestPlayer.psc  SeverActions_Brawl.psc  SeverActions_Combat.psc  SeverActions_Crafting.psc  SeverActions_Currency.psc  SeverActions_Debt.psc  SeverActions_EatingAnimations.psc  SeverActions_FertilityMode_Bridge.psc  SeverActions_Follow.psc  SeverActions_FollowerManager.psc  SeverActions_Furniture.psc  SeverActions_Hotkeys.psc  SeverActions_Init.psc  SeverActions_Loot.psc  SeverActions_MCM.psc  SeverActions_Outfit.psc  SeverActions_OutfitAlias.psc  SeverActions_OutfitSlot.psc  SeverActions_PrismaUI.psc  SeverActions_Property.psc  SeverActions_SLOArousal.psc  SeverActions_SpellCast.psc  SeverActions_SpellCastAlias.psc  SeverActions_SpellTeach.psc  SeverActions_Survival.psc  SeverActions_Travel.psc  SeverActions_WheelMenu.psc  SeverActions_YieldAlias.psc
99 Sever's Hearth/00 Core/: SeversHearth.esp
99 Sever's Hearth/00 Core/SKSE/Plugins/: SeversHearthNative.toml
99 Sever's Hearth/00 Core/Scripts/: SeversHearth_Camp.pex
99 Sever's Hearth/00 Core/Source/Scripts/: SeversHearth_Camp.psc
Actions/Adult-SLOAroused/Scripts/: SeverActions_SLOArousal.pex
Native/: CMakeLists.txt  README.md  build.ps1  build_dll.ps1  skse-project.json  vcpkg-configuration.json  vcpkg.json
Native/Scripts/: SeverActionsNative.pex
Native/cmake/: version.rc.in
Native/src/: ActorFinder.h  AlchemyDB.h  ArrivalMonitor.cpp  ArrivalMonitor.h  BookUtils.h  CollisionUtils.h  CraftingDB.h  CrimeUtils.h  DBFBridge.h  DialogueAnimManager.cpp  DialogueAnimManager.h  FertilityMode.h  FurnitureManager.cpp  FurnitureManager.h  GuardFinder.h  InventoryUtils.h  LocationResolver.h  NND_API.h  NearbySearch.h  NsfwUtils.h  OffScreenTracker.h  OrphanCleanup.cpp  OrphanCleanup.h  PackageManager.cpp  PackageManager.h  RecipeDB.h  SandboxManager.cpp  SandboxManager.h  SkyrimNetBridge.h  SpellDB.h  StringUtils.h  StuckDetector.h  SurvivalUtils.cpp  SurvivalUtils.h  TeammateMonitor.cpp  TeammateMonitor.h  TravelDB.h  YieldMonitor.cpp  YieldMonitor.h  main.cpp  (+4 more)
Patches/AI Overhaul/: AIO-SeverActions-Patch.esp
Patches/Daegon Kaekiri/: README.md
Patches/Daegon Kaekiri/Scripts/: k101DaegonQuestAliasScript.pex  k101PlayerAliasLoaderScript.pex
Patches/Daegon Kaekiri/Source/Scripts/: k101DaeHugScript.psc  k101DaegonController.psc  k101DaegonCustomOutfitContainerScript.psc  k101DaegonQuestAliasScript.psc  k101DaegonUtilityScript.psc  k101PlayerAliasLoaderScript.psc  ww42hugfollowerscript.psc
PrismaUI/views/SeverActions/: app.js  index.html  style.css
fomod/: ModuleConfig.xml  info.xml
(+190 files in other folders)
